force-app/main/default/objects/Issue__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board</label>
    <referenceTo>Board__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>