force-app/main/default/objects/Issue__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Sub-issues</relationshipLabel>
    <relationshipName>Subissues</relationshipName>
    <type>Lookup</type>
</CustomField>