force-app/main/default/objects/Issue__c/recordTypes/Spike.recordType-meta.xml
<RecordType>
    <fullName>Spike</fullName>
    <active>true</active>
    <label>Spike</label>
</RecordType>