force-app/main/default/objects/Issue__c/recordTypes/User_story.recordType-meta.xml
<RecordType>
    <fullName>User_story</fullName>
    <active>true</active>
    <label>User story</label>
</RecordType>