force-app/main/default/objects/Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>